--- a/index.html
+++ b/index.html
@@ -84,6 +84,29 @@
         padding: 10px;
       }
     }
+@media (max-width: 600px) {
+      body {
+        margin: 10px;
+      }
+
+      .table-container {
+        max-width: 100%;
+        padding: 10px;
+      }
+
+      table {
+        font-size: 10px;
+        min-width: 300px;
+      }
+
+      th, td {
+        padding: 8px;
+      }
+
+      th {
+        font-size: 13px;
+      }
+    }
   </style>
 </head>
 <body>
