--- a/index.html
+++ b/index.html
@@ -69,6 +69,9 @@
     a:hover {
       text-decoration: underline;
     }
+    a:visited {
+      color: #6f42c1; /* Warna setelah link diklik */
+    }
 
     @media (max-width: 768px) {
       .table-container {
