--- a/index.html
+++ b/index.html
@@ -69,9 +69,10 @@
     a:hover {
       text-decoration: underline;
     }
-    a:visited {
-      color: #6f42c1; /* Warna setelah link diklik */
-    }
+
+   a:visited {
+   color: #6f42c1; /* Warna setelah link diklik */
+   }
 
     @media (max-width: 768px) {
       .table-container {
@@ -123,27 +124,27 @@
           <tr>
             <th>No</th>
             <th>Nama</th>
-            <th>Link Tugas</th>
+            <th>Link</th>
           </tr>
         </thead>
         <tbody>
-          <tr><td>1</td><td>Abdul Jabbar</td><td><a href="#" target="_blank">Link Tugas</a></td></tr>
-          <tr><td>2</td><td>Abdul Rizal Kholiq</td><td><a href="#" target="_blank">Link Tugas</a></td></tr>
-          <tr><td>3</td><td>Alif Alfatah</td><td><a href="#" target="_blank">Link Tugas</a></td></tr>
-          <tr><td>4</td><td>Angga Rakhmansyah</td><td><a href="https://unpam.cloud/" target="_blank">Link Tugas</a></td></tr>
-          <tr><td>5</td><td>Bagus Taufik Hidayat</td><td><a href="#" target="_blank">Link Tugas</a></td></tr>
-          <tr><td>6</td><td>Bella Putri Amelia</td><td><a href="#" target="_blank">Link Tugas</a></td></tr>
-          <tr><td>7</td><td>Dani</td><td><a href="#" target="_blank">Link Tugas</a></td></tr>
-          <tr><td>8</td><td>Deni Mulyawan</td><td><a href="#" target="_blank">Link Tugas</a></td></tr>
-          <tr><td>9</td><td>Eneng Isti Alpiyanti</td><td><a href="#" target="_blank">Link Tugas</a></td></tr>
-          <tr><td>10</td><td>Fachrul Rozi</td><td><a href="#" target="_blank">Link Tugas</a></td></tr>
-          <tr><td>11</td><td>Farriz Raehan</td><td><a href="#" target="_blank">Link Tugas</a></td></tr>
-          <tr><td>12</td><td>Fitri Bidayatul Hidayah</td><td><a href="#" target="_blank">Link Tugas</a></td></tr>
-          <tr><td>13</td><td>Ivan Hermawan</td><td><a href="#" target="_blank">Link Tugas</a></td></tr>
-          <tr><td>14</td><td>Jonnes Febboys Zai</td><td><a href="#" target="_blank">Link Tugas</a></td></tr>
-          <tr><td>15</td><td>Kaila Aleishya</td><td><a href="#" target="_blank">Link Tugas</a></td></tr>
-	  <tr><td>16</td><td>Kharisma Tri Octaviyani</td><td><a href="#" target="_blank">Link Tugas</a></td></tr>
-          <tr><td>17</td><td>Lamanda Lintang Lestari</td><td><a href="#" target="_blank">Link Tugas</a></td></tr>
+          <tr><td>1</td><td>Abdul Jabbar</td><td><a href="https://jabbar.unpam.cloud" target="_blank">jabbar.unpam.cloud</a></td></tr>
+          <tr><td>2</td><td>Abdul Rizal Kholiq</td><td><a href="#" target="_blank"></a></td></tr>
+          <tr><td>3</td><td>Alif Alfatah</td><td><a href="#" target="_blank"></a></td></tr>
+          <tr><td>4</td><td>Angga Rakhmansyah</td><td><a href="https://unpam.cloud" target="_blank">unpam.cloud</a></td></tr>
+          <tr><td>5</td><td>Bagus Taufik Hidayat</td><td><a href="#" target="_blank"></a></td></tr>
+          <tr><td>6</td><td>Bella Putri Amelia</td><td><a href="#" target="_blank"></a></td></tr>
+          <tr><td>7</td><td>Dani</td><td><a href="#" target="_blank"></a></td></tr>
+          <tr><td>8</td><td>Deni Mulyawan</td><td><a href="#" target="_blank"></a></td></tr>
+          <tr><td>9</td><td>Eneng Isti Alpiyanti</td><td><a href="#" target="_blank"></a></td></tr>
+          <tr><td>10</td><td>Fachrul Rozi</td><td><a href="#" target="_blank"></a></td></tr>
+          <tr><td>11</td><td>Farriz Raehan</td><td><a href="#" target="_blank"></a></td></tr>
+          <tr><td>12</td><td>Fitri Bidayatul Hidayah</td><td><a href="#" target="_blank"></a></td></tr>
+          <tr><td>13</td><td>Ivan Hermawan</td><td><a href="#" target="_blank"></a></td></tr>
+          <tr><td>14</td><td>Jonnes Febboys Zai</td><td><a href="#" target="_blank"></a></td></tr>
+          <tr><td>15</td><td>Kaila Aleishya</td><td><a href="#" target="_blank"></a></td></tr>
+	  <tr><td>16</td><td>Kharisma Tri Octaviyani</td><td><a href="#" target="_blank"></a></td></tr>
+          <tr><td>17</td><td>Lamanda Lintang Lestari</td><td><a href="#" target="_blank"></a></td></tr>
         </tbody>
       </table>
     </div>
@@ -155,27 +156,27 @@
           <tr>
             <th>No</th>
             <th>Nama</th>
-            <th>Link Tugas</th>
+            <th>Link</th>
           </tr>
         </thead>
         <tbody>
-          <tr><td>18</td><td>Lesmana Prawira Kusumah</td><td><a href="#" target="_blank">Link Tugas</a></td></tr>
-          <tr><td>19</td><td>Letarman Lase</td><td><a href="#" target="_blank">Link Tugas</a></td></tr>
-          <tr><td>20</td><td>Lukman</td><td><a href="#" target="_blank">Link Tugas</a></td></tr>
-          <tr><td>21</td><td>Moh. Fachri Hasan</td><td><a href="#" target="_blank">Link Tugas</a></td></tr>
-          <tr><td>22</td><td>Muhamad Aliyudin</td><td><a href="#" target="_blank">Link Tugas</a></td></tr>
-          <tr><td>23</td><td>Muhamad Nurul Faqih</td><td><a href="#" target="_blank">Link Tugas</a></td></tr>
-          <tr><td>24</td><td>Muhammad Abdillah</td><td><a href="#" target="_blank">Link Tugas</a></td></tr>
-          <tr><td>25</td><td>Muhammad Ramzy</td><td><a href="#" target="_blank">Link Tugas</a></td></tr>
-          <tr><td>26</td><td>Muhammad Zulfathi</td><td><a href="#" target="_blank">Link Tugas</a></td></tr>
-          <tr><td>27</td><td>Rian Maulana</td><td><a href="#" target="_blank">Link Tugas</a></td></tr>
-          <tr><td>28</td><td>Rossa Amalia Monitha Januari</td><td><a href="#" target="_blank">Link Tugas</a></td></tr>
-          <tr><td>29</td><td>Samuel Valentino Rattu</td><td><a href="#" target="_blank">Link Tugas</a></td></tr>
-          <tr><td>30</td><td>Sayuti Malik</td><td><a href="#" target="_blank">Link Tugas</a></td></tr>
-          <tr><td>31</td><td>Somantri</td><td><a href="#" target="_blank">Link Tugas</a></td></tr>
-          <tr><td>32</td><td>Syafira Anggraini</td><td><a href="#" target="_blank">Link Tugas</a></td></tr>
-          <tr><td>33</td><td>Wildan Salam</td><td><a href="#" target="_blank">Link Tugas</a></td></tr>
-          <tr><td>34</td><td>Yoggi Dwi Saputra</td><td><a href="#" target="_blank">Link Tugas</a></td></tr>
+          <tr><td>18</td><td>Lesmana Prawira Kusumah</td><td><a href="#" target="_blank"></a></td></tr>
+          <tr><td>19</td><td>Letarman Lase</td><td><a href="#" target="_blank"></a></td></tr>
+          <tr><td>20</td><td>Lukman</td><td><a href="#" target="_blank"></a></td></tr>
+          <tr><td>21</td><td>Moh. Fachri Hasan</td><td><a href="#" target="_blank"></a></td></tr>
+          <tr><td>22</td><td>Muhamad Aliyudin</td><td><a href="#" target="_blank"></a></td></tr>
+          <tr><td>23</td><td>Muhamad Nurul Faqih</td><td><a href="#" target="_blank"></a></td></tr>
+          <tr><td>24</td><td>Muhammad Abdillah</td><td><a href="#" target="_blank"></a></td></tr>
+          <tr><td>25</td><td>Muhammad Ramzy</td><td><a href="#" target="_blank"></a></td></tr>
+          <tr><td>26</td><td>Muhammad Zulfathi</td><td><a href="#" target="_blank"></a></td></tr>
+          <tr><td>27</td><td>Rian Maulana</td><td><a href="https://rian.unpam.cloud/" target="_blank">rian.unpam.cloud</a></td></tr>
+          <tr><td>28</td><td>Rossa Amalia Monitha Januari</td><td><a href="#" target="_blank"></a></td></tr>
+          <tr><td>29</td><td>Samuel Valentino Rattu</td><td><a href="#" target="_blank"></a></td></tr>
+          <tr><td>30</td><td>Sayuti Malik</td><td><a href="http://sayutimalik.my.id" target="_blank">sayutimalik.my.id</a></td></tr>
+          <tr><td>31</td><td>Somantri</td><td><a href="#" target="_blank"></a></td></tr>
+          <tr><td>32</td><td>Syafira Anggraini</td><td><a href="#" target="_blank"></a></td></tr>
+          <tr><td>33</td><td>Wildan Salam</td><td><a href="#" target="_blank"></a></td></tr>
+          <tr><td>34</td><td>Yoggi Dwi Saputra</td><td><a href="#" target="_blank"></a></td></tr>
         </tbody>
       </table>
     </div>
