--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<link rel="shortcut icon" href="https://upload.wikimedia.org/wikipedia/id/6/62/UNPAM_logo1.png">
+<link rel="shortcut icon" href="lg.png">
   <title>05TPLE003 - Pemrograman Web I</title>
  <style>
     body {
@@ -71,7 +71,7 @@
     }
 
    a:visited {
-   color: #6f42c1; /* Warna setelah link diklik */
+   color: #6f42c1;
    }
 
     @media (max-width: 768px) {
@@ -115,7 +115,7 @@
 </head>
 <body>
   <h1 style="text-align: center;">Pemrograman Web I</h1>
-  <h1 style="text-align: center;">Daftar Nama Mahasiswa Kelas CS 05TPLE003</h1>
+  <h1 style="text-align: center;">Portofolio Mahasiswa Kelas 05TPLE003</h1>
   <div class="container">
     <!-- Tabel 1 -->
     <div class="table-container">
@@ -128,23 +128,23 @@
           </tr>
         </thead>
         <tbody>
-          <tr><td>1</td><td>Abdul Jabbar</td><td><a href="https://jabbar.unpam.cloud" target="_blank">jabbar.unpam.cloud</a></td></tr>
+          <tr><td>1</td><td>Abdul Jabbar</td><td><a href="https://abduljabbar111.github.io/Portofolio/" target="_blank">abduljabbar111.github.io/Portofolio</a></td></tr>
           <tr><td>2</td><td>Abdul Rizal Kholiq</td><td><a href="#" target="_blank"></a></td></tr>
           <tr><td>3</td><td>Alif Alfatah</td><td><a href="#" target="_blank"></a></td></tr>
           <tr><td>4</td><td>Angga Rakhmansyah</td><td><a href="https://unpam.cloud" target="_blank">unpam.cloud</a></td></tr>
           <tr><td>5</td><td>Bagus Taufik Hidayat</td><td><a href="#" target="_blank"></a></td></tr>
           <tr><td>6</td><td>Bella Putri Amelia</td><td><a href="#" target="_blank"></a></td></tr>
-          <tr><td>7</td><td>Dani</td><td><a href="#" target="_blank"></a></td></tr>
+          <tr><td>7</td><td>Dani</td><td><a href="https://portofolio.danzyy.my.id/" target="_blank">portofolio.danzyy.my.id</a></td></tr>
           <tr><td>8</td><td>Deni Mulyawan</td><td><a href="#" target="_blank"></a></td></tr>
           <tr><td>9</td><td>Eneng Isti Alpiyanti</td><td><a href="#" target="_blank"></a></td></tr>
           <tr><td>10</td><td>Fachrul Rozi</td><td><a href="#" target="_blank"></a></td></tr>
-          <tr><td>11</td><td>Farriz Raehan</td><td><a href="#" target="_blank"></a></td></tr>
+          <tr><td>11</td><td>Farriz Raehan</td><td><a href="https://farriz.unpam.cloud/" target="_blank">farriz.unpam.cloud</a></td></tr>
           <tr><td>12</td><td>Fitri Bidayatul Hidayah</td><td><a href="#" target="_blank"></a></td></tr>
           <tr><td>13</td><td>Ivan Hermawan</td><td><a href="#" target="_blank"></a></td></tr>
           <tr><td>14</td><td>Jonnes Febboys Zai</td><td><a href="#" target="_blank"></a></td></tr>
           <tr><td>15</td><td>Kaila Aleishya</td><td><a href="#" target="_blank"></a></td></tr>
 	  <tr><td>16</td><td>Kharisma Tri Octaviyani</td><td><a href="#" target="_blank"></a></td></tr>
-          <tr><td>17</td><td>Lamanda Lintang Lestari</td><td><a href="#" target="_blank"></a></td></tr>
+          <tr><td>17</td><td>Lamanda Lintang Lestari</td><td><a href="https://tariiest.github.io/portfoliolileh/" target="_blank">tariiest.github.io/portfoliolileh</a></td></tr>
         </tbody>
       </table>
     </div>
@@ -162,7 +162,7 @@
         <tbody>
           <tr><td>18</td><td>Lesmana Prawira Kusumah</td><td><a href="#" target="_blank"></a></td></tr>
           <tr><td>19</td><td>Letarman Lase</td><td><a href="#" target="_blank"></a></td></tr>
-          <tr><td>20</td><td>Lukman</td><td><a href="#" target="_blank"></a></td></tr>
+          <tr><td>20</td><td>Lukman</td><td><a href="https://portofoliolukman.site/" target="_blank">portofoliolukman.site</a></td></tr>
           <tr><td>21</td><td>Moh. Fachri Hasan</td><td><a href="#" target="_blank"></a></td></tr>
           <tr><td>22</td><td>Muhamad Aliyudin</td><td><a href="#" target="_blank"></a></td></tr>
           <tr><td>23</td><td>Muhamad Nurul Faqih</td><td><a href="#" target="_blank"></a></td></tr>
