--- a/index.html
+++ b/index.html
@@ -5,113 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <link rel="shortcut icon" href="lg.png">
   <title>05TPLE003 - Pemrograman Web I</title>
- <style>
-    body {
-      font-family: Arial, sans-serif;
-      margin: 20px;
-      background-color: #f9f9f9;
-    }
-
-    h1 {
-      text-align: center;
-      color: #333;
-    }
-
-    .container {
-      display: flex;
-      flex-wrap: wrap;
-      gap: 20px;
-      justify-content: center;
-    }
-
-    .table-container {
-      flex: 1 1 100%;
-      max-width: 600px;
-      background: #fff;
-      border-radius: 8px;
-      box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-      padding: 20px;
-      overflow-x: auto;
-    }
-
-    h2 {
-      text-align: center;
-      margin-bottom: 20px;
-      color: #333;
-    }
-
-    table {
-      width: 100%;
-      border-collapse: collapse;
-      min-width: 480px;
-    }
-
-    th, td {
-      text-align: left;
-      padding: 12px;
-      border-bottom: 1px solid #ddd;
-    }
-
-    th {
-      background-color: #007bff;
-      color: white;
-    }
-
-    tr:hover {
-      background-color: #f1f1f1;
-    }
-
-    a {
-      color: #0257b3;
-      text-decoration: none;
-    }
-
-    a:hover {
-      text-decoration: underline;
-    }
-
-   a:visited {
-   color: #6f42c1;
-   }
-
-    @media (max-width: 768px) {
-      .table-container {
-        max-width: 100%;
-        padding: 15px;
-      }
-
-      table {
-        font-size: 14px;
-      }
-
-      th, td {
-        padding: 10px;
-      }
-    }
-@media (max-width: 600px) {
-      body {
-        margin: 10px;
-      }
-
-      .table-container {
-        max-width: 100%;
-        padding: 10px;
-      }
-
-      table {
-        font-size: 10px;
-        min-width: 300px;
-      }
-
-      th, td {
-        padding: 8px;
-      }
-
-      th {
-        font-size: 13px;
-      }
-    }
-  </style>
+<link rel="stylesheet" href="css.css">
 </head>
 <body>
   <h1 style="text-align: center;">Pemrograman Web I</h1>
