--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
           <tr><td>22</td><td>Muhamad Aliyudin</td><td><a href="#" target="_blank"></a></td></tr>
           <tr><td>23</td><td>Muhamad Nurul Faqih</td><td><a href="#" target="_blank"></a></td></tr>
           <tr><td>24</td><td>Muhammad Abdillah</td><td><a href="#" target="_blank"></a></td></tr>
-          <tr><td>25</td><td>Muhammad Ramzy</td><td><a href="#" target="_blank"></a></td></tr>
+          <tr><td>25</td><td>Muhammad Ramzy</td><td><a href="https://muhammadramzy27.github.io/web1/" target="_blank">muhammadramzy27.github.io/web1</a></td></tr>
           <tr><td>26</td><td>Muhammad Zulfathi</td><td><a href="#" target="_blank"></a></td></tr>
           <tr><td>27</td><td>Rian Maulana</td><td><a href="https://rian.unpam.cloud/" target="_blank">rian.unpam.cloud</a></td></tr>
           <tr><td>28</td><td>Rossa Amalia Monitha Januari</td><td><a href="#" target="_blank"></a></td></tr>
