--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
           </tr>
         </thead>
         <tbody>
-          <tr><td>1</td><td>Abdul Jabbar</td><td><a href="https://abduljabbar111.github.io/Portofolio/" target="_blank">abduljabbar111.github.io/Portofolio</a></td></tr>
+          <tr><td>1</td><td>Abdul Jabbar</td><td><a href="https://abduljabbar111.github.io/Portofolio/" target="_blank">abduljabbar111.github.io</a></td></tr>
           <tr><td>2</td><td>Abdul Rizal Kholiq</td><td><a href="#" target="_blank"></a></td></tr>
           <tr><td>3</td><td>Alif Alfatah</td><td><a href="#" target="_blank"></a></td></tr>
           <tr><td>4</td><td>Angga Rakhmansyah</td><td><a href="https://unpam.cloud" target="_blank">unpam.cloud</a></td></tr>
@@ -38,7 +38,7 @@
           <tr><td>14</td><td>Jonnes Febboys Zai</td><td><a href="#" target="_blank"></a></td></tr>
           <tr><td>15</td><td>Kaila Aleishya</td><td><a href="#" target="_blank"></a></td></tr>
 	  <tr><td>16</td><td>Kharisma Tri Octaviyani</td><td><a href="#" target="_blank"></a></td></tr>
-          <tr><td>17</td><td>Lamanda Lintang Lestari</td><td><a href="https://tariiest.github.io/portfoliolileh/" target="_blank">tariiest.github.io/portfoliolileh</a></td></tr>
+          <tr><td>17</td><td>Lamanda Lintang Lestari</td><td><a href="https://tariiest.github.io/portfoliolileh/" target="_blank">tariiest.github.io</a></td></tr>
         </tbody>
       </table>
     </div>
@@ -61,7 +61,7 @@
           <tr><td>22</td><td>Muhamad Aliyudin</td><td><a href="#" target="_blank"></a></td></tr>
           <tr><td>23</td><td>Muhamad Nurul Faqih</td><td><a href="#" target="_blank"></a></td></tr>
           <tr><td>24</td><td>Muhammad Abdillah</td><td><a href="#" target="_blank"></a></td></tr>
-          <tr><td>25</td><td>Muhammad Ramzy</td><td><a href="https://muhammadramzy27.github.io/web1/" target="_blank">muhammadramzy27.github.io/web1</a></td></tr>
+          <tr><td>25</td><td>Muhammad Ramzy</td><td><a href="https://muhammadramzy27.github.io/web1/" target="_blank">muhammadramzy27.github.io</a></td></tr>
           <tr><td>26</td><td>Muhammad Zulfathi</td><td><a href="#" target="_blank"></a></td></tr>
           <tr><td>27</td><td>Rian Maulana</td><td><a href="https://rian.unpam.cloud/" target="_blank">rian.unpam.cloud</a></td></tr>
           <tr><td>28</td><td>Rossa Amalia Monitha Januari</td><td><a href="#" target="_blank"></a></td></tr>
