--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
           <tr><td>2</td><td>Abdul Rizal Kholiq</td><td><a href="#" target="_blank"></a></td></tr>
           <tr><td>3</td><td>Alif Alfatah</td><td><a href="#" target="_blank"></a></td></tr>
           <tr><td>4</td><td>Angga Rakhmansyah</td><td><a href="https://unpam.cloud" target="_blank">unpam.cloud</a></td></tr>
-          <tr><td>5</td><td>Bagus Taufik Hidayat</td><td><a href="https://bagustaufik.github.io/portofolio/" target="_blank">bagustaufik.github.io/</a></td></tr>
+          <tr><td>5</td><td>Bagus Taufik Hidayat</td><td><a href="https://bagustaufik.github.io/portofolio/" target="_blank">bagustaufik.github.io</a></td></tr>
           <tr><td>6</td><td>Bella Putri Amelia</td><td><a href="#" target="_blank"></a></td></tr>
           <tr><td>7</td><td>Dani</td><td><a href="https://portofolio.danzyy.my.id/" target="_blank">portofolio.danzyy.my.id</a></td></tr>
           <tr><td>8</td><td>Deni Mulyawan</td><td><a href="https://portfolio.denimulyawan.com" target="_blank">portfolio.denimulyawan.com</a></td></tr>
