--- a/index.html
+++ b/index.html
@@ -23,17 +23,17 @@
         </thead>
         <tbody>
           <tr><td>1</td><td>Abdul Jabbar</td><td><a href="https://abduljabbar111.github.io/Portofolio/" target="_blank">abduljabbar111.github.io</a></td></tr>
-          <tr><td>2</td><td>Abdul Rizal Kholiq</td><td><a href="#" target="_blank"></a></td></tr>
+          <tr><td>2</td><td>Abdul Rizal Kholiq</td><td><a href=" https://rizal14fadilah.github.io/RIZALFORT/" target="_blank">rizal14fadilah.github.io</a></td></tr>
           <tr><td>3</td><td>Alif Alfatah</td><td><a href="#" target="_blank"></a></td></tr>
           <tr><td>4</td><td>Angga Rakhmansyah</td><td><a href="https://unpam.cloud" target="_blank">unpam.cloud</a></td></tr>
           <tr><td>5</td><td>Bagus Taufik Hidayat</td><td><a href="https://bagustaufik.github.io/portofolio/" target="_blank">bagustaufik.github.io</a></td></tr>
           <tr><td>6</td><td>Bella Putri Amelia</td><td><a href="#" target="_blank"></a></td></tr>
           <tr><td>7</td><td>Dani</td><td><a href="https://portofolio.danzyy.my.id/" target="_blank">portofolio.danzyy.my.id</a></td></tr>
           <tr><td>8</td><td>Deni Mulyawan</td><td><a href="https://portfolio.denimulyawan.com" target="_blank">portfolio.denimulyawan.com</a></td></tr>
-          <tr><td>9</td><td>Eneng Isti Alpiyanti</td><td><a href="#" target="_blank"></a></td></tr>
-          <tr><td>10</td><td>Fachrul Rozi</td><td><a href="#" target="_blank"></a></td></tr>
+          <tr><td>9</td><td>Eneng Isti Alpiyanti</td><td><a href="https://istialpi.github.io/PortfolioAlpi/" target="_blank">istialpi.github.io</a></td></tr>
+          <tr><td>10</td><td>Fachrul Rozi</td><td><a href="https://fachrul160895.github.io/fachrulrozi.github.io/" target="_blank">fachrul160895.github.io</a></td></tr>
           <tr><td>11</td><td>Farriz Raehan</td><td><a href="https://farriz.unpam.cloud/" target="_blank">farriz.unpam.cloud</a></td></tr>
-          <tr><td>12</td><td>Fitri Bidayatul Hidayah</td><td><a href="#" target="_blank"></a></td></tr>
+          <tr><td>12</td><td>Fitri Bidayatul Hidayah</td><td><a href="https://fitri-cmd.github.io/fitri/" target="_blank">fitri-cmd.github.io</a></td></tr>
           <tr><td>13</td><td>Ivan Hermawan</td><td><a href="#" target="_blank"></a></td></tr>
           <tr><td>14</td><td>Jonnes Febboys Zai</td><td><a href="#" target="_blank"></a></td></tr>
           <tr><td>15</td><td>Kaila Aleishya</td><td><a href="#" target="_blank"></a></td></tr>
@@ -54,13 +54,13 @@
           </tr>
         </thead>
         <tbody>
-          <tr><td>18</td><td>Lesmana Prawira Kusumah</td><td><a href="#" target="_blank"></a></td></tr>
+          <tr><td>18</td><td>Lesmana Prawira Kusumah</td><td><a href="https://lesmana-porto-yrdlrpe8jnfelxzv.builder-preview.com/" target="_blank">lesmana-porto-yrdlrpe8jnfelxzv.builder-preview.com</a></td></tr>
           <tr><td>19</td><td>Letarman Lase</td><td><a href="#" target="_blank"></a></td></tr>
           <tr><td>20</td><td>Lukman</td><td><a href="https://portofoliolukman.site/" target="_blank">portofoliolukman.site</a></td></tr>
-          <tr><td>21</td><td>Moh. Fachri Hasan</td><td><a href="#" target="_blank"></a></td></tr>
+          <tr><td>21</td><td>Moh. Fachri Hasan</td><td><a href="https://fachrihasan15.github.io/fachrihasan15/" target="_blank">fachrihasan15.github.io</a></td></tr>
           <tr><td>22</td><td>Muhamad Aliyudin</td><td><a href="#" target="_blank"></a></td></tr>
           <tr><td>23</td><td>Muhamad Nurul Faqih</td><td><a href="#" target="_blank"></a></td></tr>
-          <tr><td>24</td><td>Muhammad Abdillah</td><td><a href="#" target="_blank"></a></td></tr>
+          <tr><td>24</td><td>Muhammad Abdillah</td><td><a href="https://muhabdil.github.io/abisportfolio.github.io/" target="_blank">muhabdil.github.io</a></td></tr>
           <tr><td>25</td><td>Muhammad Ramzy</td><td><a href="https://muhammadramzy27.github.io/web1/" target="_blank">muhammadramzy27.github.io</a></td></tr>
           <tr><td>26</td><td>Muhammad Zulfathi</td><td><a href="#" target="_blank"></a></td></tr>
           <tr><td>27</td><td>Rian Maulana</td><td><a href="https://rian.unpam.cloud/" target="_blank">rian.unpam.cloud</a></td></tr>
