--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
           <tr><td>19</td><td>Letarman Lase</td><td><a href="#" target="_blank"></a></td></tr>
           <tr><td>20</td><td>Lukman</td><td><a href="https://portofoliolukman.site/" target="_blank">portofoliolukman.site</a></td></tr>
           <tr><td>21</td><td>Moh. Fachri Hasan</td><td><a href="https://fachrihasan15.github.io/fachrihasan15/" target="_blank">fachrihasan15.github.io</a></td></tr>
-          <tr><td>22</td><td>Muhamad Aliyudin</td><td><a href="#" target="_blank"></a></td></tr>
+          <tr><td>22</td><td>Muhamad Aliyudin</td><td><a href="https://alydn62.github.io/Aliyudin-Portfolio/" target="_blank">alydn62.github.io</a></td></tr>
           <tr><td>23</td><td>Muhamad Nurul Faqih</td><td><a href="#" target="_blank"></a></td></tr>
           <tr><td>24</td><td>Muhammad Abdillah</td><td><a href="https://muhabdil.github.io/abisportfolio.github.io/" target="_blank">muhabdil.github.io</a></td></tr>
           <tr><td>25</td><td>Muhammad Ramzy</td><td><a href="https://muhammadramzy27.github.io/web1/" target="_blank">muhammadramzy27.github.io</a></td></tr>
