--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
           </tr>
         </thead>
         <tbody>
-          <tr><td>18</td><td>Lesmana Prawira Kusumah</td><td><a href="https://lesmana-porto-yrdlrpe8jnfelxzv.builder-preview.com/" target="_blank">lesmana-porto-yrdlrpe8jnfelxzv.builder-preview.com</a></td></tr>
+          <tr><td>18</td><td>Lesmana Prawira Kusumah</td><td><a href="https://lesmana-prawira.online/" target="_blank">lesmana-prawira.online</a></td></tr>
           <tr><td>19</td><td>Letarman Lase</td><td><a href="#" target="_blank"></a></td></tr>
           <tr><td>20</td><td>Lukman</td><td><a href="https://portofoliolukman.site/" target="_blank">portofoliolukman.site</a></td></tr>
           <tr><td>21</td><td>Moh. Fachri Hasan</td><td><a href="https://fachrihasan15.github.io/fachrihasan15/" target="_blank">fachrihasan15.github.io</a></td></tr>
@@ -68,7 +68,7 @@
           <tr><td>29</td><td>Samuel Valentino Rattu</td><td><a href="#" target="_blank"></a></td></tr>
           <tr><td>30</td><td>Sayuti Malik</td><td><a href="http://sayutimalik.my.id" target="_blank">sayutimalik.my.id</a></td></tr>
           <tr><td>31</td><td>Somantri</td><td><a href="#" target="_blank"></a></td></tr>
-          <tr><td>32</td><td>Syafira Anggraini</td><td><a href="#" target="_blank"></a></td></tr>
+          <tr><td>32</td><td>Syafira Anggraini</td><td><a href="https://syafira252.github.io/Myporto/" target="_blank">syafira252.github.io</a></td></tr>
           <tr><td>33</td><td>Wildan Salam</td><td><a href="#" target="_blank"></a></td></tr>
           <tr><td>34</td><td>Yoggi Dwi Saputra</td><td><a href="#" target="_blank"></a></td></tr>
         </tbody>
