--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
           <tr><td>31</td><td>Somantri</td><td><a href="#" target="_blank"></a></td></tr>
           <tr><td>32</td><td>Syafira Anggraini</td><td><a href="https://syafira252.github.io/Myporto/" target="_blank">syafira252.github.io</a></td></tr>
           <tr><td>33</td><td>Wildan Salam</td><td><a href="#" target="_blank"></a></td></tr>
-          <tr><td>34</td><td>Yoggi Dwi Saputra</td><td><a href="#" target="_blank"></a></td></tr>
+          <tr><td>34</td><td>Yoggi Dwi Saputra</td><td><a href="https://portogoy.vercel.app/" target="_blank">portogoy.vercel.app</a></td></tr>
         </tbody>
       </table>
     </div>
