--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <tbody>
           <tr><td>1</td><td>Abdul Jabbar</td><td><a href="https://abduljabbar111.github.io/Portofolio/" target="_blank">abduljabbar111.github.io</a></td></tr>
           <tr><td>2</td><td>Abdul Rizal Kholiq</td><td><a href=" https://rizal14fadilah.github.io/RIZALFORT/" target="_blank">rizal14fadilah.github.io</a></td></tr>
-          <tr><td>3</td><td>Alif Alfatah</td><td><a href="#" target="_blank"></a></td></tr>
+          <tr><td>3</td><td>Alif Alfatah</td><td><a href="https://alifalfatah.com/" target="_blank">alifalfatah.com</a></td></tr>
           <tr><td>4</td><td>Angga Rakhmansyah</td><td><a href="https://unpam.cloud" target="_blank">unpam.cloud</a></td></tr>
           <tr><td>5</td><td>Bagus Taufik Hidayat</td><td><a href="https://bagustaufik.github.io/portofolio/" target="_blank">bagustaufik.github.io</a></td></tr>
           <tr><td>6</td><td>Bella Putri Amelia</td><td><a href="https://bellaputriamelia.github.io/My-Portofolio/" target="_blank">bellaputriamelia.github.io</a></td></tr>
@@ -69,7 +69,7 @@
           <tr><td>30</td><td>Sayuti Malik</td><td><a href="http://sayutimalik.my.id" target="_blank">sayutimalik.my.id</a></td></tr>
           <tr><td>31</td><td>Somantri</td><td><a href="#" target="_blank"></a></td></tr>
           <tr><td>32</td><td>Syafira Anggraini</td><td><a href="https://syafira252.github.io/Myporto/" target="_blank">syafira252.github.io</a></td></tr>
-          <tr><td>33</td><td>Wildan Salam</td><td><a href="#" target="_blank"></a></td></tr>
+          <tr><td>33</td><td>Wildan Salam</td><td><a href="https://wildans1112.github.io/WildanPortfolio/" target="_blank">wildans1112.github.io/</a></td></tr>
           <tr><td>34</td><td>Yoggi Dwi Saputra</td><td><a href="https://portogoy.vercel.app/" target="_blank">portogoy.vercel.app</a></td></tr>
         </tbody>
       </table>
